Thurs, 8 Sep 2005, Daniel R. Fisher
1. Changed the way that the distances for the pair density histograms 
   are written.  Previously, the bins were labeled by their greatest
   distance, which caused problems at small distances.  Now, they are
   labeled by their midpoint.

Thurs, 8 Sep 2005, Amos Anderson
1. I submitted all my GPUQMC code. So far, it only works on Windows
   with Visual Studio or cygwin. Use --gpu with configure.py and look
   at the lib/README for library set up guides.
2. Several more classes have the "streaming" capability. This includes
   QMCJastrow and QMCPotential_Energy.
3. The code can now use LAPACK to calculate the inverse, but it does not
   add much improvement. Use --lapack with configure.py.
4. I changed the MPI constants in QMCRun.h to be prefixed with QMC_ because
   the other ones were conflicting with something in the Windows API.
5. For compatibility with Intel's Vtune's Call Graph, configure.py now
   accepts --vtune. This sets profiling parameters to emulate Visual
   Studio's /fixed:no.
6. There are several vtune identified performance enhancements. Most of
   them were simply moving memory allocations outside of loops.
7. Two new flag parameters were added. The WALKERS_PER_PASS is now,
   appropriately, an input parameter. In addition, I added a flag whereby
   we (programmers) can quickly test different inputs via the input file.
   The programmersLongs will allow you to enter any number of longs. I'll
   upload a couple scripts I wrote to take advantage of this.
8. I fixed a small bug in the Makefile which was causing it not to compile
   optimized code!!!
9. I added an atexit hook in QMcBeaver.cpp which I use to call getchar()
   under Windows.
10.QMCSlater no longer performs all it's calculations upon a call to
   evaluate(). It divides the time between evaluate (setup) and update_Ds
   (actual calcs) to allow QMCFunction the ability to better schedule the
   processor. This makes a difference for GPUQMC.